--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,7 +35,9 @@
 body {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	min-height: -webkit-fill-available;
+	min-height: 100dvh;
+	/* min-height: 100vh; */
 }
 
 .header {
